# finance-dashboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  justfile  opencode.json  package-lock.json  requirements.txt  setup-harness.sh  skills-lock.json  skills.md  vercel.json
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  exceptions.py  middleware.py  security.py
backend/app/data/: mock_data.py
backend/app/domains/company/: client.py  router.py  service.py
backend/app/domains/corporate_actions/: client.py  router.py  schemas.py  service.py
backend/app/domains/economics/: client.py  router.py  schemas.py  service.py
backend/app/domains/filings/: client.py  router.py  schemas.py  service.py
backend/app/domains/financials/: client.py  router.py  schemas.py  service.py
backend/app/domains/fred/: client.py  service.py
backend/app/domains/fundamentals/: client.py  router.py  schemas.py  service.py
backend/app/domains/imf/: client.py  router.py  schemas.py  service.py
backend/app/routers/: company.py  economic_data.py  fundamentals.py  inside_days.py  market_indices.py  price_chart.py  upcoming_events.py
backend/app/schemas/: models.py
backend/app/services/: massive.py  polygon.py
backend/app/shared/: http_client.py  schemas.py
backend/tests/: conftest.py  test_auth.py  test_health.py
backend/tests/domains/: test_economics_router.py  test_economics_service.py  test_fred_client.py  test_fundamentals.py  test_scanner_service.py
(+240 files in other folders)
